; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_surface.c_dds_fourcc_to_d3dformat.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_surface.c_dds_fourcc_to_d3dformat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dds_fourcc_to_d3dformat.known_fourcc = internal constant [15 x i64] [i64 129, i64 128, i64 130, i64 133, i64 140, i64 139, i64 138, i64 137, i64 136, i64 132, i64 135, i64 142, i64 131, i64 134, i64 141], align 16
@.str = private unnamed_addr constant [20 x i8] c"Unknown FourCC %#x\0A\00", align 1
@D3DFMT_UNKNOWN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @dds_fourcc_to_d3dformat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dds_fourcc_to_d3dformat(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %19, %1
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @ARRAY_SIZE(i64* getelementptr inbounds ([15 x i64], [15 x i64]* @dds_fourcc_to_d3dformat.known_fourcc, i64 0, i64 0))
  %8 = icmp ult i32 %6, %7
  br i1 %8, label %9, label %22

9:                                                ; preds = %5
  %10 = load i32, i32* %4, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds [15 x i64], [15 x i64]* @dds_fourcc_to_d3dformat.known_fourcc, i64 0, i64 %11
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* %3, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %9
  %17 = load i64, i64* %3, align 8
  store i64 %17, i64* %2, align 8
  br label %26

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18
  %20 = load i32, i32* %4, align 4
  %21 = add i32 %20, 1
  store i32 %21, i32* %4, align 4
  br label %5

22:                                               ; preds = %5
  %23 = load i64, i64* %3, align 8
  %24 = call i32 @WARN(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i64 %23)
  %25 = load i64, i64* @D3DFMT_UNKNOWN, align 8
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %22, %16
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i32 @ARRAY_SIZE(i64*) #1

declare dso_local i32 @WARN(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
